[gd_scene load_steps=20 format=3 uid="uid://cn0h8ppoq8uq8"]

[ext_resource type="Script" path="res://scripts/enemies/mage.gd" id="1_aa64x"]
[ext_resource type="PackedScene" uid="uid://b2mr8f4r6fqb5" path="res://scenes/environment/gibs/mage.tscn" id="2_7cli8"]
[ext_resource type="PackedScene" uid="uid://d4k7qjsc8bglc" path="res://scenes/enemy_home.tscn" id="4_sbqsb"]
[ext_resource type="Texture2D" uid="uid://dsi7k27hhox0v" path="res://textures/alerted.png" id="6_3vwci"]
[ext_resource type="Material" uid="uid://c0vwp18rc74ju" path="res://resources/materials/aura_mat.tres" id="7_c364q"]
[ext_resource type="PackedScene" uid="uid://c6qjuc4e3ow38" path="res://models/dynamic_props/enemies/mountainside_mage.glb" id="7_g0t8h"]
[ext_resource type="FontVariation" uid="uid://cr4vqwh16ob78" path="res://resources/default_font.tres" id="8_8pmtp"]
[ext_resource type="Script" path="res://scripts/enemies/anim.gd" id="10_w8c6t"]
[ext_resource type="PackedScene" uid="uid://cd6bos2i6d23v" path="res://scenes/editor_tools/difficulty_visualiser.tscn" id="11_osjj8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2lsg5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qg53b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jb1n0"]
size = Vector3(2, 2.39, 1)

[sub_resource type="SphereMesh" id="SphereMesh_irllb"]
material = ExtResource("7_c364q")
radius = 1.03
height = 5.915
radial_segments = 10
rings = 10

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ngnas"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_atyuv"]
material = SubResource("StandardMaterial3D_ngnas")
flip_faces = true
radial_segments = 10
rings = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n47a8"]
shading_mode = 0
albedo_color = Color(1, 0.631373, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_gskn1"]
material = SubResource("StandardMaterial3D_n47a8")
radial_segments = 10
rings = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lkt5v"]
transparency = 1
shading_mode = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_dn01v"]
radial_segments = 12

[node name="mage" type="CharacterBody3D" groups=["activatable", "enemy", "lightweight"]]
top_level = true
collision_layer = 2
collision_mask = 257
script = ExtResource("1_aa64x")
gibs = ExtResource("2_7cli8")

[node name="hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_2lsg5")

[node name="collision_area" type="Area3D" parent="." groups=["enemy_area"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 65536
collision_mask = 65536
input_ray_pickable = false

[node name="collision_area_hitbox" type="CollisionShape3D" parent="collision_area"]
shape = SubResource("CylinderShape3D_qg53b")

[node name="home" parent="." instance=ExtResource("4_sbqsb")]
color = Color(0.0156863, 0.733333, 0.247059, 0.858824)

[node name="ray" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
enabled = false
collision_mask = 769
hit_from_inside = true

[node name="raycast_collision" type="Area3D" parent="." groups=["enemy_raycast_collision"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05309, 0)
visible = false
collision_layer = 4
collision_mask = 0

[node name="raycast_hitbox" type="CollisionShape3D" parent="raycast_collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0563563, 0)
shape = SubResource("BoxShape3D_jb1n0")

[node name="mesh" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="alerted" type="Sprite3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.855, 0)
visible = false
visibility_range_end = 175.0
modulate = Color(1, 0.227451, 0.243137, 0.709804)
pixel_size = 0.0195
billboard = 1
texture_filter = 0
texture = ExtResource("6_3vwci")

[node name="aura" type="MeshInstance3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00643, 0)
visible = false
visibility_range_end = 175.0
mesh = SubResource("SphereMesh_irllb")

[node name="health" type="Label3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17772, 0)
visible = false
visibility_range_end = 42.0
visibility_range_end_margin = 0.1
billboard = 1
texture_filter = 0
text = "100"
font = ExtResource("8_8pmtp")
font_size = 64

[node name="mountainside_mage" parent="mesh" instance=ExtResource("7_g0t8h")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("10_w8c6t")

[node name="fireball" type="MeshInstance3D" parent="mesh"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0.752877)
visible = false
cast_shadow = 0
visibility_range_end = 175.0
mesh = SubResource("SphereMesh_atyuv")

[node name="sprite_interior" type="MeshInstance3D" parent="mesh/fireball"]
transform = Transform3D(0.635, 0, 0, 0, 0.635, 0, 0, 0, 0.635, 0, 0, 0)
cast_shadow = 0
visibility_range_end = 175.0
mesh = SubResource("SphereMesh_gskn1")
skeleton = NodePath("../..")

[node name="respawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="difficulty_visualiser" parent="." instance=ExtResource("11_osjj8")]
material_override = SubResource("StandardMaterial3D_lkt5v")
mesh = SubResource("CylinderMesh_dn01v")

[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
